# pxspr.push

./: CMakeLists.txt  README.md  conanfile.txt  package-info.json.in
.github/workflows/: build.yml
docs/: pxspr.push.maxref.xml
help/: pxspr.push.maxhelp
source/: CMakeLists.txt
source/pxspr.push/pxspr.push/: CMakeLists.txt  max.pxspr.push.c  pxspr.push.c
